# research-bd

./: .dockerignore  .env.example  .env.recaptcha.example  .gitignore  Dockerfile  Dockerfile.worker  FRONTEND_API_CHANGES.md  FRONTEND_API_CHANGES_V2.md  FRONTEND_API_CHANGES_V3.md  FRONTEND_SPEC.md  Makefile  README.md  docker-compose.yml  pyproject.toml  worker_entrypoint.sh
.github/workflows/: deploy.yml
app/: config.py  main.py
app/ai_models/: embedding_model.py  qa_model.py  summarizer_model.py
app/api/: advanced_routes.py  auth_routes.py  chat_routes.py  collection_routes.py  gap_analyzer_routes.py  health_routes.py  notes_routes.py  paper_routes.py  research_routes.py  scholar_routes.py
app/database/: prisma_client.py
app/middleware/: auth.py  rate_limiter.py  security.py
app/schemas/: chat_schema.py  note_schema.py  paper_schema.py  scholar_schema.py  user_schema.py
app/services/: citation_service.py  clustering_service.py  embedding_service.py  gcs_service.py  pdf_service.py  rag_service.py  recaptcha_service.py  scholar_service.py  summarization_service.py
app/utils/: chunking.py  text_cleaning.py
app/workers/: celery_worker.py  tasks.py
gcp/: cloud-run-service.yaml  deploy.sh  setup-infra.sh
prisma/: schema.prisma
research/: pyvenv.cfg
scripts/: init_db.sql
tests/: conftest.py
tests/api/: test_endpoints.py
tests/unit/: test_auth.py  test_citations.py  test_schemas.py  test_utils.py
